Fixing up the footer alignment for issue 35

--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -291,7 +291,8 @@ th[scope="row"] {
         margin-left: 5px;
     }
 }
-.footer {
+
+footer {
     position: fixed;
     bottom: 0;
     left: 0;
